--- a/src/app/logging-start/sign-up/sign-up.component.scss
+++ b/src/app/logging-start/sign-up/sign-up.component.scss
@@ -1,9 +1,24 @@
-.white-bckgrnd {
+@mixin button() {
+  width: 65%;
+  height: 50px;
+  border-radius: 25px;
+}
+@mixin buttonFill(){
+  padding-top: 14px;
+  font-size: 14px
+}
+@mixin logsLabel() {
+  width: 65%;
+  font-size: 11px;
+  text-align: left;
+}
+
+.whiteBackground {
   background-color: #E3E8EB;
   width: 100%;
   height: 1250px;
 }
-.pink-bckgrnd {
+.pinkBackground {
   background-color: #FEEEDE;
   width: 100%;
   height: 720px;
@@ -28,10 +43,12 @@
   border-radius: 5px
 }
 .data-label {
-  width: 65%;
-  font-size: 11px;
-  text-align: left;
+  @include logsLabel();
   margin: 100px auto auto;
+}
+.data-label2 {
+  @include logsLabel();
+  margin: 55px auto auto;
 }
 .forms {
   background-color: #E3E8EB;
@@ -43,40 +60,22 @@
   cursor: pointer;
   margin: 7% auto auto;
   background-color: #E24F54;
-  width: 65%;
-  height: 50px;
-  border-radius: 25px;
-}
-.red-button-fill {
-  color: white;
-  padding-top: 14px;
-  font-size: 14px
+  @include button();
 }
 .white-button {
   cursor: not-allowed;
   margin: 3% auto auto;
   background-color: #FFFFFF;
-  width: 65%;
-  height: 50px;
   border: 3px #F1F4F6 solid;
-  border-radius: 25px;
+  @include button();
+}
+.red-button-fill {
+  @include buttonFill();
+  color: white;
 }
 .white-button-fill {
+  @include buttonFill();
   color: black;
-  padding-top: 14px;
-  font-size: 14px
-}
-.forms {
-  background-color: #E3E8EB;
-  width: 65%;
-  margin: auto;
-  height: 70px
-}
-.data-label2 {
-  width: 65%;
-  font-size: 11px;
-  text-align: left;
-  margin: 55px auto auto;
 }
 .checkbox-add {
   margin-top: 10%
